fix: fix error build

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,20 +19,17 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@next/next/recommended",
     "next/core-web-vitals",
+    "next/typescript",
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      { "endOfLine": "auto" },
-      { "usePrettierrc": true }
-    ],
+    "prettier/prettier": ["error", { "endOfLine": "auto" }, { "usePrettierrc": true }],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "react/display-name": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-var-requires": 0,
-    "@typescript-eslint/no-unused-vars": ["error"],
+    "@typescript-eslint/no-unused-vars": 1,
     "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
